--- a/src/templates/en/base.html
+++ b/src/templates/en/base.html
@@ -89,6 +89,7 @@ Our mission is to combine the raw stats and trends of the HTTP Archive with the 
 {% block authors %}Authors{% endblock %}
 
 {% block reactions %}Reactions{% endblock %}
+{% block source %}View Source{% endblock %}
 
 {% block like %}Like{% endblock %}
 {% block repost %}Repost{% endblock %}
