--- a/src/templates/base/base_chapter.html
+++ b/src/templates/base/base_chapter.html
@@ -58,7 +58,7 @@ window.discussion_url="https://discuss.httparchive.org/t/{{ metadata.get('discus
 </script>
 {% endif %}
 {{ super() }}
-<script async src="{{ get_versioned_filename('/static/js/webmentions.js') }}" nonce="{{ csp_nonce() }}"></script>
+<script defer src="{{ get_versioned_filename('/static/js/webmentions.js') }}" nonce="{{ csp_nonce() }}"></script>
 {% endblock %}
 
 {# Calls to action for readers who want to engage more with this chapter. #}
@@ -197,13 +197,13 @@ window.discussion_url="https://discuss.httparchive.org/t/{{ metadata.get('discus
         <span id="mentions-label" data-plural="{{ self.mention() }}" data-singular="{{ self.mentions() }}">{{ self.mentions() }}</span>
       </button>
     </div>
-    <div id="likes-panel" role="tabpanel" tabindex="0" aria-labelledby="likes-tab" data-like-text="{{ self.like_reaction_text() }}">
+    <div id="likes-panel" role="tabpanel" tabindex="0" aria-labelledby="likes-tab">
     </div>
-    <div id="reposts-panel" role="tabpanel" tabindex="0" aria-labelledby="reposts-tab" data-repost-text="{{ self.repost_reaction_text() }}" hidden>
+    <div id="reposts-panel" role="tabpanel" tabindex="0" aria-labelledby="reposts-tab" hidden>
     </div>
-    <div id="replies-panel" role="tabpanel" tabindex="0" aria-labelledby="replies-tab" data-reply-text="{{ self.reply_reaction_text() }}" hidden>
+    <div id="replies-panel" role="tabpanel" tabindex="0" aria-labelledby="replies-tab" hidden>
     </div>
-    <div id="mentions-panel" role="tabpanel" tabindex="0" aria-labelledby="mentions-tab" data-mention-text="{{ self.mention_reaction_text() }}" hidden>
+    <div id="mentions-panel" role="tabpanel" tabindex="0" aria-labelledby="mentions-tab" hidden>
     </div>
   </div>
 {% endmacro %}
@@ -389,9 +389,11 @@ window.discussion_url="https://discuss.httparchive.org/t/{{ metadata.get('discus
         <div class="chapter-links">
           {{ render_actions() }}
         </div>
-        <section class="webmentions">
+        {% if year >= 2021 %}
+        <section class="webmentions js-enable hidden">
           {{ render_webmentions() }}
         </section>
+        {% endif %}
         <section class="authors">
             {{ render_authors() }}
         </section>
@@ -404,6 +406,16 @@ window.discussion_url="https://discuss.httparchive.org/t/{{ metadata.get('discus
             </svg>
             <span class="num-comments"><span class="not-mobile">{{ self.comments_fallback() }}</span></span> <span data-translation class="comment-singular visually-hidden-mobile">{{ self.comment() }}</span>
             <span data-translation class="comment-plural visually-hidden-mobile">{{ self.comments() }}</span>
+          </a>
+        </div>
+        {% elif year | int >= 2021 %}
+        <div id="cta-container">
+          <a class="alt btn chapter-cta comment-cta" href="#reactions">
+            <svg width="22" height="22" role="img" aria-hidden="true">
+              <title id="discuss-this-chapter-cta">{{ self.discuss_this_chapter() }}:</title>
+              <use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#comment-logo"></use>
+            </svg>
+            {{ self.reactions() }}
           </a>
         </div>
         {% endif %}
