Moves processMentions in the renderReactions function

--- a/src/templates/fr/base.html
+++ b/src/templates/fr/base.html
@@ -89,6 +89,7 @@ Notre mission est de combiner les statistiques brutes et les tendances de HTTP A
 {% block authors %}Auteur·ice·s{% endblock %}
 
 {% block reactions %}Reactions{% endblock %}
+{% block source %}View Source{% endblock %}
 
 {% block like %}Like{% endblock %}
 {% block repost %}Repost{% endblock %}
