--- a/src/templates/pt/base.html
+++ b/src/templates/pt/base.html
@@ -89,6 +89,7 @@ Nossa missão é combinar as estatísticas brutas e as tendências do HTTP Archi
 {% block authors %}Autores{% endblock %}
 
 {% block reactions %}Reactions{% endblock %}
+{% block source %}View Source{% endblock %}
 
 {% block like %}Like{% endblock %}
 {% block repost %}Repost{% endblock %}
