--- a/src/templates/uk/base.html
+++ b/src/templates/uk/base.html
@@ -89,6 +89,7 @@
 {% block authors %}Автори{% endblock %}
 
 {% block reactions %}Reactions{% endblock %}
+{% block source %}View Source{% endblock %}
 
 {% block like %}Like{% endblock %}
 {% block repost %}Repost{% endblock %}
