--- a/src/templates/it/base.html
+++ b/src/templates/it/base.html
@@ -89,6 +89,7 @@ La nostra missione è combinare le statistiche grezze e le tendenze del HTTP Arc
 {% block authors %}Autori{% endblock %}
 
 {% block reactions %}Reactions{% endblock %}
+{% block source %}View Source{% endblock %}
 
 {% block like %}Like{% endblock %}
 {% block repost %}Repost{% endblock %}
