--- a/src/templates/en/base.html
+++ b/src/templates/en/base.html
@@ -89,16 +89,16 @@ Our mission is to combine the raw stats and trends of the HTTP Archive with the 
 {% block authors %}Authors{% endblock %}
 
 {% block reactions %}Reactions{% endblock %}
-{% block source %}View Source{% endblock %}
+{% block source %}View source{% endblock %}
 
-{% block like %}Like{% endblock %}
-{% block repost %}Repost{% endblock %}
-{% block reply %}Reply{% endblock %}
-{% block mention %}Mention{% endblock %}
-{% block likes %}Likes{% endblock %}
-{% block reposts %}Reposts{% endblock %}
-{% block replies %}Replies{% endblock %}
-{% block mentions %}Mentions{% endblock %}
+{% block like %}like{% endblock %}
+{% block repost %}repost{% endblock %}
+{% block reply %}reply{% endblock %}
+{% block mention %}mention{% endblock %}
+{% block likes %}likes{% endblock %}
+{% block reposts %}reposts{% endblock %}
+{% block replies %}replies{% endblock %}
+{% block mentions %}mentions{% endblock %}
 
 {% macro onTwitter(twitterHandle) %}@{{twitterHandle}} on Twitter{% endmacro %}
 {% macro onGitHub(gitHubHandle) %}{{gitHubHandle}} on GitHub{% endmacro %}
