--- a/src/templates/es/base.html
+++ b/src/templates/es/base.html
@@ -88,17 +88,17 @@
 {% block author %}Autor(a){% endblock %}
 {% block authors %}Autores{% endblock %}
 
-{% block reactions %}Reactions{% endblock %}
-{% block source %}View Source{% endblock %}
+{% block reactions %}reacciones{% endblock %}
+{% block source %}ver fuente{% endblock %}
 
-{% block like %}Like{% endblock %}
-{% block repost %}Repost{% endblock %}
-{% block reply %}Reply{% endblock %}
-{% block mention %}Mention{% endblock %}
-{% block likes %}Likes{% endblock %}
-{% block reposts %}Reposts{% endblock %}
-{% block replies %}Replies{% endblock %}
-{% block mentions %}Mentions{% endblock %}
+{% block like %}gusta{% endblock %}
+{% block repost %}repost{% endblock %}
+{% block reply %}respuesta{% endblock %}
+{% block mention %}mencionar{% endblock %}
+{% block likes %}gustos{% endblock %}
+{% block reposts %}reposts{% endblock %}
+{% block replies %}respuestas{% endblock %}
+{% block mentions %}menciones{% endblock %}
 
 {% macro onTwitter(twitterHandle) %}@{{twitterHandle}} en Twitter{% endmacro %}
 {% macro onGitHub(gitHubHandle) %}{{gitHubHandle}} en GitHub{% endmacro %}
