--- a/src/templates/fr/base.html
+++ b/src/templates/fr/base.html
@@ -88,17 +88,17 @@ Notre mission est de combiner les statistiques brutes et les tendances de HTTP A
 {% block author %}Auteur·ice{% endblock %}
 {% block authors %}Auteur·ice·s{% endblock %}
 
-{% block reactions %}Reactions{% endblock %}
-{% block source %}View Source{% endblock %}
+{% block reactions %}Réactions{% endblock %}
+{% block source %}Voir la source{% endblock %}
 
-{% block like %}Like{% endblock %}
-{% block repost %}Repost{% endblock %}
-{% block reply %}Reply{% endblock %}
-{% block mention %}Mention{% endblock %}
-{% block likes %}Likes{% endblock %}
-{% block reposts %}Reposts{% endblock %}
-{% block replies %}Replies{% endblock %}
-{% block mentions %}Mentions{% endblock %}
+{% block like %}comme{% endblock %}
+{% block repost %}republier{% endblock %}
+{% block reply %}réponse{% endblock %}
+{% block mention %}mention{% endblock %}
+{% block likes %}aime{% endblock %}
+{% block reposts %}republier{% endblock %}
+{% block replies %}réponses{% endblock %}
+{% block mentions %}mentions{% endblock %}
 
 {% macro onTwitter(twitterHandle) %}@{{twitterHandle}} sur Twitter{% endmacro %}
 {% macro onGitHub(gitHubHandle) %}{{gitHubHandle}} sur GitHub{% endmacro %}
