--- a/src/templates/nl/base.html
+++ b/src/templates/nl/base.html
@@ -88,17 +88,17 @@
 {% block author %}Auteur{% endblock %}
 {% block authors %}Auteurs{% endblock %}
 
-{% block reactions %}Reactions{% endblock %}
-{% block source %}View Source{% endblock %}
+{% block reactions %}Reacties{% endblock %}
+{% block source %}Bron bekijken{% endblock %}
 
-{% block like %}Like{% endblock %}
-{% block repost %}Repost{% endblock %}
-{% block reply %}Reply{% endblock %}
-{% block mention %}Mention{% endblock %}
-{% block likes %}Likes{% endblock %}
-{% block reposts %}Reposts{% endblock %}
-{% block replies %}Replies{% endblock %}
-{% block mentions %}Mentions{% endblock %}
+{% block like %}like{% endblock %}
+{% block repost %}repost{% endblock %}
+{% block reply %}antwoord{% endblock %}
+{% block mention %}vermeld{% endblock %}
+{% block likes %}likes{% endblock %}
+{% block reposts %}reposts{% endblock %}
+{% block replies %}antwoorden{% endblock %}
+{% block mentions %}vermeldingen{% endblock %}
 
 {% macro onTwitter(twitterHandle) %}@{{twitterHandle}} op Twitter{% endmacro %}
 {% macro onGitHub(gitHubHandle) %}{{gitHubHandle}} op GitHub{% endmacro %}
