--- a/src/templates/ru/base.html
+++ b/src/templates/ru/base.html
@@ -88,17 +88,17 @@
 {% block author %}Автор{% endblock %}
 {% block authors %}Авторы{% endblock %}
 
-{% block reactions %}Reactions{% endblock %}
-{% block source %}View Source{% endblock %}
+{% block reactions %}Реакции{% endblock %}
+{% block source %}Посмотреть источник{% endblock %}
 
-{% block like %}Like{% endblock %}
-{% block repost %}Repost{% endblock %}
-{% block reply %}Reply{% endblock %}
-{% block mention %}Mention{% endblock %}
-{% block likes %}Likes{% endblock %}
-{% block reposts %}Reposts{% endblock %}
-{% block replies %}Replies{% endblock %}
-{% block mentions %}Mentions{% endblock %}
+{% block like %}hравится{% endblock %}
+{% block repost %}pепост{% endblock %}
+{% block reply %}oтвет{% endblock %}
+{% block mention %}Упоминание{% endblock %}
+{% block likes %}hравится{% endblock %}
+{% block reposts %}pепосты{% endblock %}
+{% block replies %}oтветы{% endblock %}
+{% block mentions %}yпоминания{% endblock %}
 
 {% macro onTwitter(twitterHandle) %}@{{twitterHandle}} на Twitter{% endmacro %}
 {% macro onGitHub(gitHubHandle) %}{{gitHubHandle}} на GitHub{% endmacro %}
