--- a/src/templates/tr/base.html
+++ b/src/templates/tr/base.html
@@ -88,17 +88,17 @@ Misyonumuz, HTTP Archive&#8217;ın ham istatistiklerini ve eğilimlerini web top
 {% block author %}Yazar{% endblock %}
 {% block authors %}Yazarlar{% endblock %}
 
-{% block reactions %}Reactions{% endblock %}
-{% block source %}View Source{% endblock %}
+{% block reactions %}Reaksiyonlar{% endblock %}
+{% block source %}Kaynağı görüntüle{% endblock %}
 
-{% block like %}Like{% endblock %}
-{% block repost %}Repost{% endblock %}
-{% block reply %}Reply{% endblock %}
-{% block mention %}Mention{% endblock %}
-{% block likes %}Likes{% endblock %}
-{% block reposts %}Reposts{% endblock %}
-{% block replies %}Replies{% endblock %}
-{% block mentions %}Mentions{% endblock %}
+{% block like %}beğenisi{% endblock %}
+{% block repost %}yayınlamak{% endblock %}
+{% block reply %}yanıtı{% endblock %}
+{% block mention %}anma{% endblock %}
+{% block likes %}beğenileri{% endblock %}
+{% block reposts %}gönderileri{% endblock %}
+{% block replies %}yanıtları{% endblock %}
+{% block mentions %}bahseder{% endblock %}
 
 {% macro onTwitter(twitterHandle) %}@{{twitterHandle}}Twitter üzerinde{% endmacro %}
 {% macro onGitHub(gitHubHandle) %}{{gitHubHandle}}GitHub üzerinde {% endmacro %}
