--- a/src/templates/it/base.html
+++ b/src/templates/it/base.html
@@ -88,17 +88,17 @@ La nostra missione è combinare le statistiche grezze e le tendenze del HTTP Arc
 {% block author %}Autore{% endblock %}
 {% block authors %}Autori{% endblock %}
 
-{% block reactions %}Reactions{% endblock %}
-{% block source %}View Source{% endblock %}
+{% block reactions %}Reazioni{% endblock %}
+{% block source %}Vedi la fonte{% endblock %}
 
-{% block like %}Like{% endblock %}
-{% block repost %}Repost{% endblock %}
-{% block reply %}Reply{% endblock %}
-{% block mention %}Mention{% endblock %}
-{% block likes %}Likes{% endblock %}
-{% block reposts %}Reposts{% endblock %}
-{% block replies %}Replies{% endblock %}
-{% block mentions %}Mentions{% endblock %}
+{% block like %}piace{% endblock %}
+{% block repost %}ripubblicare{% endblock %}
+{% block reply %}rispondere{% endblock %}
+{% block mention %}menzionare{% endblock %}
+{% block likes %}piace{% endblock %}
+{% block reposts %}ripubblica{% endblock %}
+{% block replies %}risposte{% endblock %}
+{% block mentions %}menzioni{% endblock %}
 
 {% macro onTwitter(twitterHandle) %}@{{twitterHandle}} su Twitter{% endmacro %}
 {% macro onGitHub(gitHubHandle) %}{{gitHubHandle}} su GitHub{% endmacro %}
