--- a/src/templates/uk/base.html
+++ b/src/templates/uk/base.html
@@ -88,17 +88,17 @@
 {% block author %}Автор{% endblock %}
 {% block authors %}Автори{% endblock %}
 
-{% block reactions %}Reactions{% endblock %}
-{% block source %}View Source{% endblock %}
+{% block reactions %}Реакції{% endblock %}
+{% block source %}Переглянути джерело{% endblock %}
 
-{% block like %}Like{% endblock %}
-{% block repost %}Repost{% endblock %}
-{% block reply %}Reply{% endblock %}
-{% block mention %}Mention{% endblock %}
-{% block likes %}Likes{% endblock %}
-{% block reposts %}Reposts{% endblock %}
-{% block replies %}Replies{% endblock %}
-{% block mentions %}Mentions{% endblock %}
+{% block like %}Подобається{% endblock %}
+{% block repost %}репост{% endblock %}
+{% block reply %}відповідь{% endblock %}
+{% block mention %}згадка{% endblock %}
+{% block likes %}Лайки{% endblock %}
+{% block reposts %}репости{% endblock %}
+{% block replies %}відповідає{% endblock %}
+{% block mentions %}згадує{% endblock %}
 
 {% macro onTwitter(twitterHandle) %}@{{twitterHandle}} у Twitter{% endmacro %}
 {% macro onGitHub(gitHubHandle) %}{{gitHubHandle}} на GitHub{% endmacro %}
